Closed Bug 106876 Opened 24 years ago Closed 21 years ago

Webstar ftp server gives warnings and no file downloaded.

Categories

(Core Graveyard :: Networking: FTP, defect)

defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: tarahim, Assigned: dougt)

References

Details

2001102308 trunk for MacOS9.2.1 Goto URL. Mozilla gives "MacOS WebStar ftp" warning dialog, and then downloading dialog is shown. If you click OK, downloading finishes immediately with an empty file.
Adding dependency to the meta bug.
Blocks: 101002
The save as dialog appearing is bug 63798. Theres a bug on making the error dialog more informative. Matti, can you remember the number? It had a patch, IIRC. Also see bug 95590.
Yes, it's bug 84472 The patch have already r/sr but Dougt forgot to check it in. I ask him already yesterday if he can check in but he seems to be busy.
If possible, we need to check that into both 0.9.4 and the trunk. Should I reopen that bug?
benc: please do, update the summary, and check that I'm ccd on it. I'll check it into the trunk tonight. I'm having network problems, or I'd do it.
future, helpwanted
Keywords: helpwanted
Target Milestone: --- → Future
basicly the URl keeps loading for ever The FTP log says: 0[344158]: (3587038) Waiting for control data (0)... 0[344158]: (3587038) nsFtpState::OnStartRequest() (spec =ftp://ftp.macnexus.org/chronos/Personal_Organizer_4.bin) 0[344158]: (3587038) reading 23 bytes: "220 FTP server ready." 0[344158]: (3587038)(dwait=0) Writing "USER anonymous" 0[344158]: (3587038) Waiting for control data (0)... and just stands there....!
I get the warning that the FTP is unsupported....
Yeah, parsing is the real prpblem. I need to rework all that post 1.0 - see teh meta bug.
I get a 530 error w/ Mozilla 1.0 RC1, Win 98.
I have no time to work on mozilla at the moment, so dougt is taking over FTP open ftp bugs -> him
Assignee: bbaetz → dougt
Looking for estimate on popularity of this server. If the usage is high, I will nominate for nsbeta1. Since there are no dupes, I need proof.
I do not know about the exact popularity. It used to be an important server on Mac platform. After wide adoption of OSX, I suppose the popularity would decline with time.
This bug is targeted at a Mac classic platform/OS, which is no longer supported by mozilla.org. Please re-target it to another platform/OS if this bug applies there as well or resolve this bug. I will resolve this bug as WONTFIX in four weeks if no action has been taken. To filter this and similar messages out, please filter for "mac_cla_reorg".
OS: Mac System 9.x → All
Hardware: Macintosh → All
*** Bug 256355 has been marked as a duplicate of this bug. ***
The URL works know, they changed the sys answer to "215 UNIX WebSTAR FTP." and Mozilla summes the Unix format while the FTP Server from dougt still sends "215 MACOS WebSTAR FTP" (without UNIX).
? x Index: nsFtpConnectionThread.cpp =================================================================== RCS file: /cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp,v retrieving revision 1.287 diff -u -r1.287 nsFtpConnectionThread.cpp --- nsFtpConnectionThread.cpp 8 Aug 2004 20:17:54 -0000 1.287 +++ nsFtpConnectionThread.cpp 22 Aug 2004 20:08:59 -0000 @@ -1233,6 +1233,7 @@ ( mResponseMsg.Find("UNIX") > -1) || ( mResponseMsg.Find("BSD") > -1) || ( mResponseMsg.Find("MACOS Peter's Server") > -1) || + ( mResponseMsg.Find("MACOS WebSTAR FTP") > -1) || ( mResponseMsg.Find("MVS") > -1) || ( mResponseMsg.Find("OS/390") > -1)) { Not ideal, but I have tested it and it works for me. Seth, can you also verify?
darin, can you sr plz?
sr=darin (heh.. timewarp to the days before patch manager!)
Fixed checked into the trunk. Marking fixed. Seth, should this go onto any branch? Checking in nsFtpConnectionThread.cpp; /cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp,v <-- nsFtpConnectionThread.cpp new revision: 1.288; previous revision: 1.287 done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Wait. Do we have a public example of a server that does not work, pre-checkin? There is no test URL in the test field. #16 says this is WFM, and I'm using pre-checkin builds, and the URL in the bug comments is WFM.
Keywords: helpwanted
The original URL is wfm (I removed the URL from teh URL field with this comment) because they seem to changed the SYST answer to "215 UNIX WebSTAR FTP." (they added "UNIX" and mozilla seems to parse it now as UNIX). The server from Dougt (see bug 256355) is a private server and this server sends the old SYST answer "215 MACOS WebSTAR FTP". The answer to your question in comment#22 is "no, there is no public URL"
I'm just wondering if Webstar changed the string in their current versions. If they did, we don't need the change in our client.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.