adding WebSTAR to the list of known FTP sites.  r=sspitzer, sr=darin, b=106876